force-app/main/default/objects/Bitacora_NC__c/Bitacora_NC__c.object-meta.xml
<CustomObject>
    <label>Bitacora_NC</label>
    <nameField>
        <label>Bitacora_NC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bitacora_NCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>