force-app/main/default/objects/Bitacora_NC__c/fields/Copiado_desde_Sap__c.field-meta.xml
<CustomField>
    <fullName>Copiado_desde_Sap__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copiado desde Sap</label>
    <type>Checkbox</type>
</CustomField>