force-app/main/default/objects/Bitacora_NC__c/fields/Fecha_Hasta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Hasta__c</fullName>
    <label>Fecha Hasta</label>
    <type>Date</type>
</CustomField>