force-app/main/default/objects/Bitacora_NC__c/fields/log__c.field-meta.xml
<CustomField>
    <fullName>log__c</fullName>
    <label>log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>