force-app/main/default/objects/Bitacora_NC__c/fields/numero_lote__c.field-meta.xml
<CustomField>
    <fullName>numero_lote__c</fullName>
    <label>numero lote</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>