force-app/main/default/objects/Bitacora_NC__c/fields/sociedad__c.field-meta.xml
<CustomField>
    <fullName>sociedad__c</fullName>
    <label>sociedad</label>
    <length>4</length>
    <type>Text</type>
</CustomField>