force-app/main/default/objects/Bitacora_NC__c/fields/Tipo_de_NC__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_NC__c</fullName>
    <label>Tipo de NC</label>
    <length>30</length>
    <type>Text</type>
</CustomField>