force-app/main/default/objects/Bitacora_NC__c/fields/vbtyp__c.field-meta.xml
<CustomField>
    <fullName>vbtyp__c</fullName>
    <label>vbtyp</label>
    <length>2</length>
    <type>Text</type>
</CustomField>