force-app/main/default/objects/Bitacora_NC__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Copiado_desde_Sap__c</columns>
    <columns>Fecha_Desde__c</columns>
    <columns>fkart__c</columns>
    <columns>vbtyp__c</columns>
    <columns>numero_lote__c</columns>
    <columns>Cantidad_Registros__c</columns>
    <columns>sociedad__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>