force-app/main/default/objects/Bitacora_NC__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Fecha_Desde__c</columns>
    <columns>fkart__c</columns>
    <columns>numero_lote__c</columns>
    <columns>sociedad__c</columns>
    <columns>vbtyp__c</columns>
    <columns>Fecha_Hasta__c</columns>
    <columns>Tipo_de_NC__c</columns>
    <columns>Cantidad_Registros_SF__c</columns>
    <columns>Cantidad_Registros__c</columns>
    <columns>log__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>